--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ input, select {
 }
 
 input:focus, select:focus {
-    border-color: #007bff;
+    border-color: #d258f0;
     outline: none;
 }
 
@@ -60,7 +60,7 @@ button {
     padding: 12px;
     border: none;
     border-radius: 5px;
-    background-color: #007bff;
+    background-color: #d258f0;
     color: white;
     font-size: 16px;
     cursor: pointer;
